--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/Insta?characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=0415
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
